# awesome-trade

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
experiments/: CMakeLists.txt  perf_sma_open_close_strategy.cpp
lib/: CMakeLists.txt
lib/markets/: CMakeLists.txt  market.cpp  market.h  recorders.cpp  recorders.h  visualize.py
lib/markets/backtest/: CMakeLists.txt  market.cpp  market.h
lib/markets/backtest/ut/: CMakeLists.txt  test_market.cpp
lib/markets/dummy/: CMakeLists.txt  market.h
lib/markets/dummy/ut/: CMakeLists.txt
lib/markets/tinkoff/: CMakeLists.txt
lib/markets/tinkoff/ut/: CMakeLists.txt
lib/markets/ut/: CMakeLists.txt
lib/runners/: CMakeLists.txt  runner.h
lib/runners/dummy/: CMakeLists.txt  runner.h
lib/runners/dummy/ut/: CMakeLists.txt  test_runner.cpp
lib/runners/ut/: CMakeLists.txt
lib/strategy/: CMakeLists.txt  signals.cpp  signals.h  strategy.h
lib/strategy/closers/: CMakeLists.txt  closer.cpp  closer.h
lib/strategy/features/: CMakeLists.txt  cached_feature.h  feature.cpp  feature.h
lib/strategy/openers/: CMakeLists.txt  opener.h
lib/strategy/optimizers/: CMakeLists.txt  optimizer.cpp  optimizer.h
lib/strategy/params/: CMakeLists.txt  hash.h  params.cpp  params.h
lib/strategy/ut/: CMakeLists.txt  test_strategy.cpp
lib/util/: CMakeLists.txt
lib/util/http/: CMakeLists.txt  client.cpp  client.h
lib/util/macros/: CMakeLists.txt  macros.cpp  macros.h
lib/util/sum_queue/: CMakeLists.txt  sum_queue.cpp  sum_queue.h
lib/util/vector_view/: CMakeLists.txt  vector_view.cpp  vector_view.h
(+42 files in other folders)
